# EnginePlugins

./: CMakeLists.txt  manifest.json
.github/workflows/: build.yml
AdvancedAnimationPlugin/: CMakeLists.txt
AdvancedAnimationPlugin/include/AdvancedAnimationPlugin/IK/: FABRIKSolver.hpp  IKComponent.hpp
AdvancedAnimationPlugin/include/AdvancedAnimationPlugin/Kalman/: KalmanCharacterComponent.hpp  KalmanFilter6D.hpp
AdvancedAnimationPlugin/include/AdvancedAnimationPlugin/MotionMatching/: MotionDatabase.hpp  MotionFeatureExtractor.hpp  MotionMatchingComponent.hpp
AdvancedAnimationPlugin/src/: AdvancedAnimationPlugin.cpp
AdvancedAnimationPlugin/src/IK/: FABRIKSolver.cpp  IKComponent.cpp
AdvancedAnimationPlugin/src/Kalman/: KalmanCharacterComponent.cpp  KalmanFilter6D.cpp
AdvancedAnimationPlugin/src/MotionMatching/: MotionDatabase.cpp  MotionFeatureExtractor.cpp  MotionMatchingComponent.cpp
TerrainPlugin/: CMakeLists.txt
TerrainPlugin/include/TerrainPlugin/: TerrainTools.hpp
TerrainPlugin/src/: TerrainPlugin.cpp  TerrainTools.cpp
